--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,6 +37,6 @@
         integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
 
-<script src="/script/index.js"></script>
+<script src="/js/index.js"></script>
 </body>
 </html>
