--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -17,6 +17,6 @@
 
 <!-- Include jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/script/login.js"></script>
+<script src="/js/login.js"></script>
 </body>
 </html>
